package com.xu.factory.simplefactory.pizzastore.order;

/**
 * @Author: xuhang
 * @Date: 2020/2/28 13:28
 * @Description:
 **/
public class PizzaStore {
    public static void main(String[] args) {
        OrderPizza orderPizza = new OrderPizza();
    }
}
